--- a/src/TemplateCoreMaterial/Views/Account/Login.cshtml
+++ b/src/TemplateCoreMaterial/Views/Account/Login.cshtml
@@ -12,58 +12,71 @@
 }
 
 <style>
-  .snippet-group
-  {
-    display: table-cell;
-    vertical-align: middle;
-    margin: 0;
-  }
+.mdl-layout 
+{
+  align-items: center;
+  justify-content: center;
+}
+
+.login__content 
+{
+  padding: 24px;
+  flex: none;
+}
+
+.mdl-card__actions mdl-card--border 
+{
+  align-items: flex-end;
+}
+
+#login-submit 
+{
+  float: right;
+}
+
+.mdl-card__title
+{
+  height: 60px;
+}
 </style>
-@*<h4>@ViewData["Title"].</h4>*@
-
-
-@*<div class="mdl-grid">
-  <div class="mdl-layout-spacer"></div>
-
-  <div class="mdl-shadow--6dp">
-
-      <div class="demo-card-wide mdl-shadow--6dp">
-        <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
-          <h2 class="mdl-card__title-text"></h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-            <div>
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <label class="mdl-textfield__label" for="UserName">@Localizer["Username"]</label>
-                <input asp-for="UserName" type="text" id="UserName" class="mdl-textfield__input" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-              </div>
-            </div>
-            <br />
-            <div>
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <label class="mdl-textfield__label" for="Password">@Localizer["Password"]</label>
-                <input asp-for="Password" type="password" id="Password" class="mdl-textfield__input" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-              </div>
-            </div>
-            <br />
-            <div class="mdl-textfield--align-right">
-              <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                @Localizer["Log in"]
-              </button>
-            </div>
-          </form>
-        </div>
+<div class="mdl-layout mdl-js-layout mdl-color--grey-100">
+  <main class="login__content">
+    <div class="mdl-card mdl-shadow--6dp">
+      <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
+        <h2 class="mdl-card__title-text"></h2>
       </div>
-
-  </div>
-  <div class="mdl-layout-spacer"></div>
-</div>*@
-
-
-<div class="mdl-cell--12-col">
+      <div class="mdl-card__supporting-text">
+        <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
+          <div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <label class="mdl-textfield__label" for="UserName">@Localizer["Username"]</label>
+              <input asp-for="UserName" type="text" id="UserName" class="mdl-textfield__input" />
+              <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
+          </div>
+          <br />
+          <div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <label class="mdl-textfield__label" for="Password">@Localizer["Password"]</label>
+              <input asp-for="Password" type="password" id="Password" class="mdl-textfield__input" />
+              <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+          </div>
+          <br />
+          <div>
+            <button id="login-submit" type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+              @Localizer["Log in"]
+            </button>
+          </div>
+        </form>
+      </div>
+      @*<div class="mdl-card__actions mdl-card--border">
+        <button id="login-submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Log in</button>
+      </div>*@
+    </div>
+  </main>
+</div>
+@*<div class="mdl-cell--12-col">
     <div>
       <div asp-validation-summary="All" class="text-danger"></div>
       <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
@@ -90,7 +103,7 @@
         </div>
       </form>
     </div>
-  </div>
+  </div>*@
 
 
 @section Scripts {
