--- a/src/TemplateCoreMaterial/Views/Shared/_LayoutWithoutNavigation.cshtml
+++ b/src/TemplateCoreMaterial/Views/Shared/_LayoutWithoutNavigation.cshtml
@@ -17,17 +17,20 @@
 
   <environment names="Development">
     @*<link rel="stylesheet" href="~/css/site.css" />*@
-    <link rel="stylesheet" href="~/css/main.css" />
+
     <!-- Material Design -->
     <link rel="stylesheet" href="~/css/mdl/material.css" />
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="~/css/main.css" />
   </environment>
   <environment names="Staging,Production">
-    <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    @*<link rel="stylesheet" href="~/lib/material-design-lite/material.min.css" />*@
+    @*<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />*@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="~/lib/material-design-lite/material.min.css" />
   </environment>
 </head>
 <body>  
