--- a/src/TemplateCoreMaterial/Views/User/EditorTemplates/UserRoleCreateViewModel.cshtml
+++ b/src/TemplateCoreMaterial/Views/User/EditorTemplates/UserRoleCreateViewModel.cshtml
@@ -2,9 +2,25 @@
 
 @*@Html.HiddenFor(model => model.Id)*@
 <tr>
-  <td class="mdl-data-table__cell--non-numeric">
-    @Html.CheckBoxFor(model => model.Check)
+  <td>
+
+    @*<span class="mdl-checkbox__ripple-container mdl-js-ripple-effect mdl-ripple--center">*@
+    @*@Html.CheckBoxFor(model => model.Check)*@
+    @*</span>*@
+    <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect mdl-data-table__select mdl-js-ripple-effect--ignore-events is-upgraded">
+      @Html.CheckBoxFor(model => model.Check, new { @class = "mdl-checkbox__input" })
+      <span class="mdl-checkbox__focus-helper"></span>
+      <span class="mdl-checkbox__box-outline">
+        <span class="mdl-checkbox__tick-outline">
+        </span>
+      </span>
+    </label>
+
+
+    @*@Html.CheckBoxFor(model => model.Check,
+  new { @class = "mdl-checkbox__ripple-container mdl-js-ripple-effect mdl-ripple--center" })*@
   </td>
+
   <td class="mdl-data-table__cell--non-numeric">
     @Html.DisplayFor(model => model.Name)
   </td>
