added knockout minor changes, bug.

--- a/src/TemplateCoreMaterial/Views/User/CreaUserNoHeader.cshtml
+++ b/src/TemplateCoreMaterial/Views/User/CreaUserNoHeader.cshtml
@@ -83,11 +83,11 @@
     </tbody>
   </table>
 
-  @*<div>
+  <div>
     <div>
       <input type="submit" value=@Localizer["Create"] class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" />
     </div>
-  </div>*@
+  </div>
 </form>
 @section Scripts {
   @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
